2004-06-08 Ian Rutt
 * Merged netCDF_IO branch into main trunk - seems to work OK. 
   *** NB *** The new capability to mask out some parts of the domain
   was developed in parallel with the netCDF stuff, and hasn't yet
   been fully integrated into the netcdf structure. That's the next step -
   I thought it wise not to attempt too much at once!
 * The previous unmerged version of the HEAD is tagged as PRE_NETCDF_IO
 * Added informative comment to glimmer_thck.f90
	
2004-06-04 Magnus Hagdorn
 * made variable names case sensitive (g_land.glw, generate_ncvars.py)
 * split up user guide into individual sections
 * added netCDF and config file documentation
	
2004-06-03 Magnus Hagdorn
 * found some more unused filenames and removed out_stem with ncfile

2004-06-03 Magnus Hagdorn
 * removed unused filenames for namelists and structures
   usrffile, topgfile, relxfile, prcpfile, presusrffile, latifile

2004-06-03 Ian Rutt
 * Added dependency of f90_dep.mak on the Makefile and makefile.arc
 * Cancelled implicit rule that tries to make .o files out of .mod files
 using the MODULA-2 compiler (m2c), which sometimes causes build problems.

2004-06-01 Magnus Hagdorn
 * new documentation structure
	
2004-05-27 Ian Rutt
 * Fixed problems with polar stereographic projection and interpolation routines.

2004-05-25 Ian Rutt
 * Added comment to main glimmer subroutine

2004-05-24 Magnus Hagdorn
 * added some standard name attributes (ncdf_file.f90.in, ncdf_vars.def)
	
2004-05-24 Magnus Hagdorn
 * g_land.gln: removed outs namelist
 * glimmer_global.f90: added version string
 * ncdf_file.f90.in, generate_ncvars.py: renamed loop index sp to spot
 * glimmer_config.f90: fixed silly bug
 * added global meta data to netCDF output (g_land.glw, ncdf.f90.in, ncdf_file.f90.in, ncdf_params.f90.in)

2004-05-24 Ian Rutt
 * Sorted out input and output arrays of water flux, and added diagnostic
	outputs of total water fluxes and ice sheet volume.